--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
     "@google/genai": "https://aistudiocdn.com/@google/genai@^1.28.0",
     "date-fns": "https://aistudiocdn.com/date-fns@^4.1.0",
     "vite": "https://aistudiocdn.com/vite@^7.1.12",
-    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.0"
+    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.0",
+    "process": "https://aistudiocdn.com/process@^0.11.10"
   }
 }
 </script>
